# cuda_test

./: .gitignore  CMakeLists.txt  README.md  compile.ps1  run.ps1
src/: cuda.cu  cuda.cuh  includes.h  main.cpp
tools/boost/: .gitignore
